<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DOELibs</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- Action Bar Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_createbook">Create Book</string>
    <string name="action_logout">Logout</string>
    
    
    <!-- TABS -->
    <string name="title_browse_section">Browse</string>
    <string name="title_loans_section">Loans</string>
    <string name="title_create_section">Create</string>
    <string name="title_account_section">Account</string>
    <string name="title_activity_create_book">Create Book</string>

    <!-- Browse Fragment -->
    <string name="browsehint">TITLE / AUTHOR</string>

    <!-- Create Book Activity -->
    <string name="isbn">ISBN Number</string>
    <string name="title">Book Title</string>
    <string name="author">Author Name</string>
    <string name="publication_year">Publication Year</string>
    <string name="description">Book Description</string>
    <string name="addbook">Add a book</string>
    <string name="information">Book Information</string>
    <string name="scan">Scan ISBN Number</string>
    <string name="browseicon_info">Icon, ignore me.</string>

    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="register_account">Register Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_register">Login</string>
    
    <!-- Login Fragment -->
    <string name="dialog_login_loading">Logging in</string>
    <string name="dialog_processing">Processing</string>
    
    <!-- Loans Fragment -->
    <string name="dialog_loans_loading">Loading Loans...</string>
    
    <!-- Standard Dialog Messages -->
    <string name="dialog_nointernet_title">Communication problems</string>
    <string name="dialog_nointernet_message">Make sure you are connected to the internet.</string>
    <string name="dialog_timeout_title">Communication problems</string>
    <string name="dialog_timeout_message">Problems sending request. Make sure you are connected to the internet.</string>
    <string name="dialog_alert_error_cancel">Cancel</string>
    <string name="dialog_alert_error_title">Error</string>
    <string name="dialog_alert_error_unhandledMessage">Internal error. Communication problems with the server.</string>

    <!-- REST API -->
    <string name="rest_callingSystem">doelibs</string>
    <string name="rest_login">http://doelibs.se.preview.binero.se/api/Account/Login</string>
    <string name="rest_register">http://doelibs.se.preview.binero.se/api/Account/Register</string>
    <string name="rest_loans">http://doelibs.se.preview.binero.se/api/Loans/Get</string>
    
    
    
</resources>
